--- a/p8105_hw1_jys2136.md
+++ b/p8105_hw1_jys2136.md
@@ -3,33 +3,83 @@ p8105\_hw1\_jys2136
 Jocelyn Sun
 9/29/2021
 
-## R Markdown
+# Problem 1
 
-This is an R Markdown document. Markdown is a simple formatting syntax
-for authoring HTML, PDF, and MS Word documents. For more details on
-using R Markdown see <http://rmarkdown.rstudio.com>.
-
-When you click the **Knit** button a document will be generated that
-includes both content as well as the output of any embedded R code
-chunks within the document. You can embed an R code chunk like this:
+## Creating a data frame
 
 ``` r
-summary(cars)
+set.seed(20)
+
+prob1_df = tibble(
+  random_samp = rnorm(10),
+  vec_pos = random_samp > 0,
+  vec_char = c("apple", "orange", "strawberry", "banana", "mango", "grape", "plum", "persimmon", "grapefruit", "fig"),
+  vec_fac = factor(c("April", "May", "June", "April", "May", "June", "April", "May", "June", "April"))
+)
+
+mean_random_samp = mean(pull(prob1_df, random_samp))
+mean_vec_pos = mean(pull(prob1_df, vec_pos))
+mean_vec_char = mean(pull(prob1_df, vec_char))
 ```
 
-    ##      speed           dist       
-    ##  Min.   : 4.0   Min.   :  2.00  
-    ##  1st Qu.:12.0   1st Qu.: 26.00  
-    ##  Median :15.0   Median : 36.00  
-    ##  Mean   :15.4   Mean   : 42.98  
-    ##  3rd Qu.:19.0   3rd Qu.: 56.00  
-    ##  Max.   :25.0   Max.   :120.00
+    ## Warning in mean.default(pull(prob1_df, vec_char)): argument is not numeric or
+    ## logical: returning NA
 
-## Including Plots
+``` r
+mean_vec_fac = mean(pull(prob1_df, vec_fac))
+```
 
-You can also embed plots, for example:
+    ## Warning in mean.default(pull(prob1_df, vec_fac)): argument is not numeric or
+    ## logical: returning NA
 
-![](p8105_hw1_jys2136_files/figure-gfm/pressure-1.png)<!-- -->
+For the vectors that include characters (“vec\_fac” and “vec\_char”), I
+receive a warning message informing that the argument is not numeric or
+logical. R produces “NA” as a result. I am able to receive results for
+“random\_samp” and “vec\_pos” because they contain numerical values.
+This exercise shows that R does not compute the mean for non-numeric or
+character values.
 
-Note that the `echo = FALSE` parameter was added to the code chunk to
-prevent printing of the R code that generated the plot.
+## Applying the as.numeric function
+
+``` r
+transform(prob1_df, trans_pos = as.numeric(vec_pos))
+transform(prob1_df, trans_char = as.numeric(vec_char))
+transform(prob1_df, trans_fac = as.numeric(vec_fac))
+```
+
+I am able to convert “vec\_fac”, but not “vec\_char”. The factor
+variable recognizes that my variable has three different levels, hence
+why I am able to convert “vec\_fac” to a numeric variable. However, R
+was unable to take the mean of the factor variable when the levels were
+non-numeric.
+
+# Problem 2
+
+``` r
+data("penguins", package = "palmerpenguins")
+
+view(penguins)
+
+number_rows = nrow(penguins)
+number_columns = ncol(penguins)
+number_rows
+```
+
+    ## [1] 344
+
+``` r
+number_columns
+```
+
+    ## [1] 8
+
+``` r
+mean_flipper = mean(pull(penguins, flipper_length_mm))
+```
+
+Write a short description of the penguins dataset (not the penguins\_raw
+dataset) using inline R code, including:
+
+the data in this dataset, including names / values of important
+variables the size of the dataset (using nrow and ncol) the mean flipper
+length
