created scatter and made code alterations for cleaner code for problem 1

--- a/p8105_hw1_jys2136.md
+++ b/p8105_hw1_jys2136.md
@@ -17,20 +17,34 @@ prob1_df = tibble(
   vec_fac = factor(c("April", "May", "June", "April", "May", "June", "April", "May", "June", "April"))
 )
 
-mean_random_samp = mean(pull(prob1_df, random_samp))
-mean_vec_pos = mean(pull(prob1_df, vec_pos))
-mean_vec_char = mean(pull(prob1_df, vec_char))
+mean(pull(prob1_df, random_samp))
+```
+
+    ## [1] -0.3623308
+
+``` r
+mean(pull(prob1_df, vec_pos))
+```
+
+    ## [1] 0.3
+
+``` r
+mean(pull(prob1_df, vec_char))
 ```
 
     ## Warning in mean.default(pull(prob1_df, vec_char)): argument is not numeric or
     ## logical: returning NA
 
+    ## [1] NA
+
 ``` r
-mean_vec_fac = mean(pull(prob1_df, vec_fac))
+mean(pull(prob1_df, vec_fac))
 ```
 
     ## Warning in mean.default(pull(prob1_df, vec_fac)): argument is not numeric or
     ## logical: returning NA
+
+    ## [1] NA
 
 For the vectors that include characters (“vec\_fac” and “vec\_char”), I
 receive a warning message informing that the argument is not numeric or
@@ -45,13 +59,17 @@ character values.
 transform(prob1_df, trans_pos = as.numeric(vec_pos))
 transform(prob1_df, trans_char = as.numeric(vec_char))
 transform(prob1_df, trans_fac = as.numeric(vec_fac))
+
+as.numeric(pull(prob1_df, vec_pos))
+as.numeric(pull(prob1_df, vec_char))
+as.numberic(pull(prob1_df, vec_fac))
 ```
 
-I am able to convert “vec\_fac”, but not “vec\_char”. The factor
-variable recognizes that my variable has three different levels, hence
-why I am able to convert “vec\_fac” to a numeric variable. However, R
-was unable to take the mean of the factor variable when the levels were
-non-numeric.
+I am able to convert “vec\_fac” and “vec\_pos”, but not “vec\_char”. The
+factor variable recognizes that my variable has three different levels,
+hence why I am able to convert “vec\_fac” to a numeric variable.
+However, R was unable to take the mean of the factor variable when the
+levels were non-numeric.
 
 # Problem 2
 
@@ -59,6 +77,8 @@ non-numeric.
 data("penguins", package = "palmerpenguins")
 
 view(penguins)
+
+
 
 number_rows = nrow(penguins)
 number_columns = ncol(penguins)
@@ -74,12 +94,18 @@ number_columns
     ## [1] 8
 
 ``` r
-mean_flipper = mean(pull(penguins, flipper_length_mm))
+mean(pull(penguins, flipper_length_mm))
 ```
 
-Write a short description of the penguins dataset (not the penguins\_raw
-dataset) using inline R code, including:
+    ## [1] NA
 
-the data in this dataset, including names / values of important
-variables the size of the dataset (using nrow and ncol) the mean flipper
-length
+``` r
+ggplot(penguins, 
+       aes(x = bill_length_mm, 
+           y = flipper_length_mm, 
+           color = species)) + geom_point()
+```
+
+    ## Warning: Removed 2 rows containing missing values (geom_point).
+
+![](p8105_hw1_jys2136_files/figure-gfm/problem_2_scatter-1.png)<!-- -->
