--- a/p8105_hw1_jys2136.Rmd
+++ b/p8105_hw1_jys2136.Rmd
@@ -28,20 +28,14 @@ prob1_df = tibble(
   vec_fac = factor(c("April", "May", "June", "April", "May", "June", "April", "May", "June", "April"))
 )
 
-mean_random_samp = mean(pull(prob1_df, random_samp))
-mean_vec_pos = mean(pull(prob1_df, vec_pos))
-mean_vec_char = mean(pull(prob1_df, vec_char))
-mean_vec_fac = mean(pull(prob1_df, vec_fac))
-
-mean_random_samp
-mean_vec_pos
-mean_vec_char
-mean_vec_fac
+mean(pull(prob1_df, random_samp))
+mean(pull(prob1_df, vec_pos))
+mean(pull(prob1_df, vec_char))
+mean(pull(prob1_df, vec_fac))
 
 ```
 
-For the vectors that include characters ("vec_fac" and "vec_char"), I receive a warning
-message informing that the argument is not numeric or logical. R produces "NA" as a result. I am able to receive results for "random_samp" and "vec_pos" because they contain numerical values. This exercise shows that R does not compute the mean for non-numeric or character values.
+For the vectors that include characters ("vec_fac" and "vec_char"), I receive a warning message informing that the argument is not numeric or logical. R produces "NA" as a result. I am able to receive results for "random_samp" and "vec_pos" because they contain numerical values. This exercise shows that R does not compute the mean for non-numeric or character values.
 
 ## Applying the as.numeric function
 
@@ -50,6 +44,10 @@ message informing that the argument is not numeric or logical. R produces "NA" a
 transform(prob1_df, trans_pos = as.numeric(vec_pos))
 transform(prob1_df, trans_char = as.numeric(vec_char))
 transform(prob1_df, trans_fac = as.numeric(vec_fac))
+
+as.numeric(pull(prob1_df, vec_pos))
+as.numeric(pull(prob1_df, vec_char))
+as.numberic(pull(prob1_df, vec_fac))
 
 ```
 
@@ -76,10 +74,13 @@ mean(pull(penguins, flipper_length_mm))
 
 ```
 
-mean(pull(penguins, flipper_length_mm))
+
 ```{r problem_2_scatter}
 
-
+ggplot(penguins, 
+       aes(x = bill_length_mm, 
+           y = flipper_length_mm, 
+           color = species)) + geom_point()
 
 ```
 
