attempt to alter code to get mean for problem 2. unsuccessful.

--- a/p8105_hw1_jys2136.Rmd
+++ b/p8105_hw1_jys2136.Rmd
@@ -64,7 +64,7 @@ nrow(penguins)
 ncol(penguins)
 
 
-mean(pull(penguins, flipper_length_mm)), na.rm = TRUE
+mean(pull("penguins", flipper_length_mm)), na.rm = TRUE
 
 
 ```
