--- a/p8105_hw1_jys2136.md
+++ b/p8105_hw1_jys2136.md
@@ -56,18 +56,21 @@ character values.
 ## Applying the as.numeric function
 
 ``` r
-transform(prob1_df, trans_pos = as.numeric(vec_pos))
-transform(prob1_df, trans_char = as.numeric(vec_char))
-transform(prob1_df, trans_fac = as.numeric(vec_fac))
-
-as.numeric(pull(prob1_df, vec_pos))
+as.numeric(pull(prob1_df, (vec_pos))
 as.numeric(pull(prob1_df, vec_char))
-as.numberic(pull(prob1_df, vec_fac))
+as.numeric(pull(prob1_df, vec_fac))
 ```
 
-I am able to convert “vec\_fac” and “vec\_pos”, but not “vec\_char”. The
-factor variable recognizes that my variable has three different levels,
-hence why I am able to convert “vec\_fac” to a numeric variable.
+I am able to convert “vec\_fac” and “vec\_pos”, but not “vec\_char”
+
+The as.numeric argument recognizes that logic vector has two possible
+outcomes “TRUE” or “FALSE” and converts this into binary “0” or “1”
+
+The as.numeric argument recognizes that the factor vector has 3 distinct
+levels and converts each level to a number: “1”, “2”, or “3”, respective
+of the original “levels”
+
+three different levels, thus providing a proverly converted numbers.
 However, R was unable to take the mean of the factor variable when the
 levels were non-numeric.
 
@@ -76,28 +79,58 @@ levels were non-numeric.
 ``` r
 data("penguins", package = "palmerpenguins")
 
-view(penguins)
+skimr::skim(penguins)
+```
 
+|                                                  |          |
+|:-------------------------------------------------|:---------|
+| Name                                             | penguins |
+| Number of rows                                   | 344      |
+| Number of columns                                | 8        |
+| \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_   |          |
+| Column type frequency:                           |          |
+| factor                                           | 3        |
+| numeric                                          | 5        |
+| \_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_ |          |
+| Group variables                                  | None     |
 
+Data summary
 
-number_rows = nrow(penguins)
-number_columns = ncol(penguins)
-number_rows
+**Variable type: factor**
+
+| skim\_variable | n\_missing | complete\_rate | ordered | n\_unique | top\_counts                 |
+|:---------------|-----------:|---------------:|:--------|----------:|:----------------------------|
+| species        |          0 |           1.00 | FALSE   |         3 | Ade: 152, Gen: 124, Chi: 68 |
+| island         |          0 |           1.00 | FALSE   |         3 | Bis: 168, Dre: 124, Tor: 52 |
+| sex            |         11 |           0.97 | FALSE   |         2 | mal: 168, fem: 165          |
+
+**Variable type: numeric**
+
+| skim\_variable      | n\_missing | complete\_rate |    mean |     sd |     p0 |     p25 |     p50 |    p75 |   p100 | hist  |
+|:--------------------|-----------:|---------------:|--------:|-------:|-------:|--------:|--------:|-------:|-------:|:------|
+| bill\_length\_mm    |          2 |           0.99 |   43.92 |   5.46 |   32.1 |   39.23 |   44.45 |   48.5 |   59.6 | ▃▇▇▆▁ |
+| bill\_depth\_mm     |          2 |           0.99 |   17.15 |   1.97 |   13.1 |   15.60 |   17.30 |   18.7 |   21.5 | ▅▅▇▇▂ |
+| flipper\_length\_mm |          2 |           0.99 |  200.92 |  14.06 |  172.0 |  190.00 |  197.00 |  213.0 |  231.0 | ▂▇▃▅▂ |
+| body\_mass\_g       |          2 |           0.99 | 4201.75 | 801.95 | 2700.0 | 3550.00 | 4050.00 | 4750.0 | 6300.0 | ▃▇▆▃▂ |
+| year                |          0 |           1.00 | 2008.03 |   0.82 | 2007.0 | 2007.00 | 2008.00 | 2009.0 | 2009.0 | ▇▁▇▁▇ |
+
+``` r
+nrow(penguins)
 ```
 
     ## [1] 344
 
 ``` r
-number_columns
+ncol(penguins)
 ```
 
     ## [1] 8
 
 ``` r
-mean(pull(penguins, flipper_length_mm))
+mean((pull(penguins, flipper_length_mm)), na.rm = TRUE)
 ```
 
-    ## [1] NA
+    ## [1] 200.9152
 
 ``` r
 ggplot(penguins, 
@@ -109,3 +142,9 @@ ggplot(penguins,
     ## Warning: Removed 2 rows containing missing values (geom_point).
 
 ![](p8105_hw1_jys2136_files/figure-gfm/problem_2_scatter-1.png)<!-- -->
+
+``` r
+ggsave("p8105_hw1_jys2136.pdf", height = 4, width = 6)
+```
+
+    ## Warning: Removed 2 rows containing missing values (geom_point).
