More edits to problem 2

--- a/p8105_hw1_jys2136.md
+++ b/p8105_hw1_jys2136.md
@@ -48,10 +48,11 @@ mean(pull(prob1_df, vec_fac))
 
 For the vectors that include characters (“vec\_fac” and “vec\_char”), I
 receive a warning message informing that the argument is not numeric or
-logical. R produces “NA” as a result. I am able to receive results for
-“random\_samp” and “vec\_pos” because they contain numerical values.
-This exercise shows that R does not compute the mean for non-numeric or
-character values.
+logical. R produces “NA” as a result.
+
+I am able to receive results for “random\_samp” and “vec\_pos” because
+they contain numerical values. This exercise shows that R does not
+compute the mean for non-numeric or character values.
 
 ## Applying the as.numeric function
 
@@ -115,6 +116,8 @@ Data summary
 | year                |          0 |           1.00 | 2008.03 |   0.82 | 2007.0 | 2007.00 | 2008.00 | 2009.0 | 2009.0 | ▇▁▇▁▇ |
 
 ``` r
+view(penguins)
+
 nrow(penguins)
 ```
 
@@ -131,6 +134,18 @@ mean((pull(penguins, flipper_length_mm)), na.rm = TRUE)
 ```
 
     ## [1] 200.9152
+
+From `skimr::skim(penguins)` we see that there are 3 factor variables
+and 5 numeric variables. In total, this data set has 8 variables.
+
+`nrow(penguins)` shows that we have 344 rows `ncol(penguins)` shows that
+we have 8 columns
+
+The mean flipper length is 200.9152047 mm, which is given by
+`mean((pull(penguins, flipper_length_mm)), na.rm = TRUE)` and in the
+data overview provided by `skimr::skim(penguins)`
+
+## Creating a scatterplot
 
 ``` r
 ggplot(penguins, 
