--- a/p8105_hw1_jys2136.Rmd
+++ b/p8105_hw1_jys2136.Rmd
@@ -35,7 +35,9 @@ mean(pull(prob1_df, vec_fac))
 
 ```
 
-For the vectors that include characters ("vec_fac" and "vec_char"), I receive a warning message informing that the argument is not numeric or logical. R produces "NA" as a result. I am able to receive results for "random_samp" and "vec_pos" because they contain numerical values. This exercise shows that R does not compute the mean for non-numeric or character values.
+For the vectors that include characters ("vec_fac" and "vec_char"), I receive a warning message informing that the argument is not numeric or logical. R produces "NA" as a result. 
+
+I am able to receive results for "random_samp" and "vec_pos" because they contain numerical values. This exercise shows that R does not compute the mean for non-numeric or character values.
 
 ## Applying the as.numeric function
 
@@ -65,6 +67,8 @@ data("penguins", package = "palmerpenguins")
 
 skimr::skim(penguins)
 
+view(penguins)
+
 nrow(penguins)
 ncol(penguins)
 
@@ -72,7 +76,15 @@ mean((pull(penguins, flipper_length_mm)), na.rm = TRUE)
 
 ```
 
+From `skimr::skim(penguins)` we see that there are 3 factor variables and 5 numeric variables. In total, this data set has 8 variables. 
 
+`nrow(penguins)` shows that we have 344 rows.
+`ncol(penguins)` shows that we have 8 columns.
+
+The mean flipper length is `r mean((pull(penguins, flipper_length_mm)), na.rm = TRUE)` mm, which is given by `mean((pull(penguins, flipper_length_mm)), na.rm = TRUE)` and in the data overview  provided by `skimr::skim(penguins)`.
+
+
+## Creating a scatterplot
 ```{r problem_2_scatter}
 
 ggplot(penguins, 
