--- a/p8105_hw1_jys2136.md
+++ b/p8105_hw1_jys2136.md
@@ -138,12 +138,12 @@ mean((pull(penguins, flipper_length_mm)), na.rm = TRUE)
 From `skimr::skim(penguins)` we see that there are 3 factor variables
 and 5 numeric variables. In total, this data set has 8 variables.
 
-`nrow(penguins)` shows that we have 344 rows `ncol(penguins)` shows that
-we have 8 columns
+`nrow(penguins)` shows that we have 344 rows. `ncol(penguins)` shows
+that we have 8 columns.
 
 The mean flipper length is 200.9152047 mm, which is given by
 `mean((pull(penguins, flipper_length_mm)), na.rm = TRUE)` and in the
-data overview provided by `skimr::skim(penguins)`
+data overview provided by `skimr::skim(penguins)`.
 
 ## Creating a scatterplot
 
@@ -154,12 +154,6 @@ ggplot(penguins,
            color = species)) + geom_point()
 ```
 
-    ## Warning: Removed 2 rows containing missing values (geom_point).
-
-![](p8105_hw1_jys2136_files/figure-gfm/problem_2_scatter-1.png)<!-- -->
-
 ``` r
 ggsave("p8105_hw1_jys2136.pdf", height = 4, width = 6)
 ```
-
-    ## Warning: Removed 2 rows containing missing values (geom_point).
