--- a/p8105_hw1_jys2136.md
+++ b/p8105_hw1_jys2136.md
@@ -46,15 +46,15 @@ mean(pull(prob1_df, vec_fac))
 
     ## [1] NA
 
-For the vectors that include characters (“vec\_fac” and “vec\_char”), I
+For the vectors that include characters (`vec_fac` and `vec_char`), I
 receive a warning message informing that the argument is not numeric or
-logical. R produces “NA” as a result.
+logical. R produces a warning message and `NA` as a result.
 
-I am able to receive results for “random\_samp” and “vec\_pos” because
+I am able to receive results for `random_samp` and `vec_pos` because
 they contain numerical values. This exercise shows that R does not
 compute the mean for non-numeric or character values.
 
-## Applying the as.numeric function
+## Converting to numeric data
 
 ``` r
 as.numeric(pull(prob1_df, (vec_pos))
@@ -62,24 +62,31 @@ as.numeric(pull(prob1_df, vec_char))
 as.numeric(pull(prob1_df, vec_fac))
 ```
 
-I am able to convert “vec\_fac” and “vec\_pos”, but not “vec\_char”
+I am able to convert `vec_fac` and `vec_pos`, but not `vec_char`
 
-The as.numeric argument recognizes that logic vector has two possible
-outcomes “TRUE” or “FALSE” and converts this into binary “0” or “1”
+The as.numeric argument recognizes that the factor vector `vec_fac` has
+3 distinct levels and converts each level to a number: `1`, `2`, or `3`,
+respective of the original “levels”, which explains why we could take
+the mean.
 
-The as.numeric argument recognizes that the factor vector has 3 distinct
-levels and converts each level to a number: “1”, “2”, or “3”, respective
-of the original “levels”
+The as.numeric argument recognizes that logic vector `vec_pos` has two
+possible outcomes `TRUE` or `FALSE` and converts this into binary `0` or
+`1`, which explains why we could take the mean.
 
-three different levels, thus providing a proverly converted numbers.
-However, R was unable to take the mean of the factor variable when the
-levels were non-numeric.
+The character vector `vec_char` was not converted numerically. The
+output produced as series of `NA` because the values in this vector
+cannot be converted to numbers, which explains why we could not take the
+mean.
 
 # Problem 2
 
 ``` r
 data("penguins", package = "palmerpenguins")
+```
 
+## Data Overview for Dataset Penguins
+
+``` r
 skimr::skim(penguins)
 ```
 
@@ -116,8 +123,6 @@ Data summary
 | year                |          0 |           1.00 | 2008.03 |   0.82 | 2007.0 | 2007.00 | 2008.00 | 2009.0 | 2009.0 | ▇▁▇▁▇ |
 
 ``` r
-view(penguins)
-
 nrow(penguins)
 ```
 
@@ -129,23 +134,25 @@ ncol(penguins)
 
     ## [1] 8
 
-``` r
-mean((pull(penguins, flipper_length_mm)), na.rm = TRUE)
-```
-
-    ## [1] 200.9152
-
 From `skimr::skim(penguins)` we see that there are 3 factor variables
 and 5 numeric variables. In total, this data set has 8 variables.
 
 `nrow(penguins)` shows that we have 344 rows. `ncol(penguins)` shows
 that we have 8 columns.
 
+## Calculating mean flipper length
+
+``` r
+mean((pull(penguins, flipper_length_mm)), na.rm = TRUE)
+```
+
+    ## [1] 200.9152
+
 The mean flipper length is 200.9152047 mm, which is given by
 `mean((pull(penguins, flipper_length_mm)), na.rm = TRUE)` and in the
 data overview provided by `skimr::skim(penguins)`.
 
-## Creating a scatterplot
+## Scatterplot (flipper length vs bill length)
 
 ``` r
 ggplot(penguins, 
@@ -153,6 +160,10 @@ ggplot(penguins,
            y = flipper_length_mm, 
            color = species)) + geom_point()
 ```
+
+![](p8105_hw1_jys2136_files/figure-gfm/problem_2_scatter-1.png)<!-- -->
+
+## Saving a scatterplot
 
 ``` r
 ggsave("p8105_hw1_jys2136.pdf", height = 4, width = 6)
