--- a/p8105_hw1_jys2136.md
+++ b/p8105_hw1_jys2136.md
@@ -32,23 +32,21 @@ mean(pull(prob1_df, vec_pos))
 mean(pull(prob1_df, vec_char))
 ```
 
-    ## Warning in mean.default(pull(prob1_df, vec_char)): argument is not numeric or
-    ## logical: returning NA
-
     ## [1] NA
 
 ``` r
 mean(pull(prob1_df, vec_fac))
 ```
 
-    ## Warning in mean.default(pull(prob1_df, vec_fac)): argument is not numeric or
-    ## logical: returning NA
-
     ## [1] NA
 
 For the vectors that include characters (`vec_fac` and `vec_char`), I
 receive a warning message informing that the argument is not numeric or
-logical. R produces a warning message and `NA` as a result.
+logical. R produces `NA` in the output and the following warning
+message:
+
+    Warning message:
+    In mean.default(pull(<data>, <vector>)): argument is not numeric or logical: returning NA
 
 I am able to receive results for `random_samp` and `vec_pos` because
 they contain numerical values. This exercise shows that R does not
